add dto layer